[package]
name = "astrea"
version = "0.1.0"
authors = ["Rafi Baum <rafi@ukbaums.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"