[package]
name = "astrea"
version = "0.1.0"
authors = ["Rafi Baum <rafi@ukbaums.com>"]
edition = "2018"

[dependencies]
http = "*"
hyper = "0.13.0-alpha.4"
hyper-tls = "0.4.0-alpha.4"
native-tls = "0.2.3"
tokio = "0.2.0-alpha.6"
tokio-tls = "0.3.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"