[package]
name = "astrea"
version = "0.1.0"
authors = ["Rafi Baum <rafi@ukbaums.com>"]
edition = "2018"

[dependencies]
http = "*"
hyper = "0.13.0-alpha.4"
hyper-rustls = "0.19.0-alpha.3"
tokio = "0.2.0-alpha.6"
tokio-rustls = "0.12.0-alpha.8"
rustls = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"